testdata/salesOrderData.js
export const credentials = 
{
     // testname: 'Login with valid user credentials',
      username: 'rmgyantra',
      password: 'rmgy@9999',
     // error: '',
}


